Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119999

Failed links are always reported as originating from the beginning of the documentation comment

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.8.0 FF
    • 6.2.4
    • Build tools: qdoc
    • None
    • 61b16896c (dev)
    • DaVinci 92, DaVinci 93

      When a link target does not exist, I get error messages like this:

      testing-methodologies.qdoc:1: (qdoc) warning: Can't link to 'unit-test'
      

      Here the line number of the error is actually the number of the line at which the documentation comment begins — if I insert an empty line at the beginning of the file, the error is reported as coming from line 2.

      In this form, the error messages are not very helpful for .qdoc files that consist of a single big documentation comment.

       

       

        For Gerrit Dashboard: QTBUG-119999
        # Subject Branch Project Status CR V

            diseraluca Luca Di Sera
            mred Markus Redeker
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes